@@ -103,6 +103,10 @@ public:
 	void SetNoSelection();
 	bool IsSelected(int x, int y) const;
 
+	// terminal title
+	inline string terminalTitle() const { return terminal_title; }
+	inline void setTerminalTitle(string s) { terminal_title = s; }
+
 	mutable set<int>* dirty;
 	int InsertMode;
 	CrsVisibility CursorVisibility;
@@ -123,6 +127,7 @@ private:
 	Backtrack* backtrack;
 	int current_backtrack;
 	int screen_advances; // screen advance (new line at bottom) counter
+	string terminal_title;
 	Selection selection;
 };
 
